Add new Features

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -113,6 +113,18 @@
         </div>
 		<div class="row">
 			<div class="col s12">
+				<h6 class="title translate">Anleitung WebUntis</h6>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col s6">
+                <p class="translate">
+                    Für die richtigen Einstellungn nutzen See bitte die <a href="https://github.com/Newan/ioBroker.webuntis" target="_blank">Anleitung</a>
+                </p>
+            </div>
+		</div>
+        <div class="row">
+			<div class="col s12">
 				<h6 class="title translate">WebUntis settings</h6>
 			</div>
 		</div>
