--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -130,6 +130,18 @@
 		</div>
 		<div class="row">
 			<div class="col s6 input-field">
+                <input type="checkbox" class="value" id="anonymous" />
+                <label for="anonymous" class="translate">Anonymous</label>
+            </div>
+
+            <div class="col s6 input-field">
+                <input type="text" class="value" id="class" />
+                <label for="class" class="translate">Class name</label>
+            </div>
+		</div>
+
+        <div class="row">
+			<div class="col s6 input-field">
                 <input type="text" class="value" id="username" />
                 <label for="username" class="translate">Username</label>
             </div>
