fix some changes for stable release

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -154,7 +154,7 @@
 		<div class="row">
 			<div class="col s6">
                 <p class="translate">
-                    Für die richtigen Einstellungn nutzen See bitte die <a href="https://github.com/Newan/ioBroker.webuntis" target="_blank">Anleitung</a>
+                    Für die richtigen Einstellungen nutzen See bitte die <a href="https://github.com/Newan/ioBroker.webuntis" target="_blank">Anleitung</a>
                 </p>
             </div>
 		</div>
